Fix login and optimize map
