# src/api/openapi.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.4",
+  "openapi": "3.0.1",
   "info": {
     "title": "Transport API",
     "version": "v1"
@@ -414,6 +414,26 @@
               }
             }
           },
+          "404": {
+            "description": "The user was not found.",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GroupErrorCodeErrorResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GroupErrorCodeErrorResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GroupErrorCodeErrorResponse"
+                }
+              }
+            }
+          },
           "401": {
             "description": "Unauthorized",
             "content": {
@@ -589,7 +609,7 @@
             }
           },
           "404": {
-            "description": "The group was not found.",
+            "description": "The group or the user was not found.",
             "content": {
               "text/plain": {
                 "schema": {
@@ -689,7 +709,7 @@
             }
           },
           "404": {
-            "description": "The group was not found.",
+            "description": "The group or the user was not found.",
             "content": {
               "text/plain": {
                 "schema": {
@@ -819,7 +839,7 @@
             }
           },
           "404": {
-            "description": "The group was not found.",
+            "description": "The group or the user was not found.",
             "content": {
               "text/plain": {
                 "schema": {
@@ -1277,83 +1297,6 @@
         }
       }
     },
-    "/api/routes/shared": {
-      "post": {
-        "tags": ["Routes"],
-        "summary": "Calculates optimized shared routes for a group of users.",
-        "requestBody": {
-          "description": "Request containing user locations and a shared destination.",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PathRequestDto"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PathRequestDto"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/PathRequestDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ProposedPathDto"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ProposedPathDto"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ProposedPathDto"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/InternalErrorCodeErrorResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/InternalErrorCodeErrorResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/InternalErrorCodeErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/user-configuration": {
       "get": {
         "tags": ["UserConfiguration"],
@@ -1657,38 +1600,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "oneOf": [
-                  {
-                    "$ref": "#/components/schemas/UserLocationRequestDto"
-                  },
-                  {
-                    "$ref": "#/components/schemas/GroupMemberLocationRequestDto"
-                  }
-                ]
+                "$ref": "#/components/schemas/UserLocationRequestDto"
               }
             },
             "text/json": {
               "schema": {
-                "oneOf": [
-                  {
-                    "$ref": "#/components/schemas/UserLocationRequestDto"
-                  },
-                  {
-                    "$ref": "#/components/schemas/GroupMemberLocationRequestDto"
-                  }
-                ]
+                "$ref": "#/components/schemas/UserLocationRequestDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "oneOf": [
-                  {
-                    "$ref": "#/components/schemas/UserLocationRequestDto"
-                  },
-                  {
-                    "$ref": "#/components/schemas/GroupMemberLocationRequestDto"
-                  }
-                ]
+                "$ref": "#/components/schemas/UserLocationRequestDto"
               }
             }
           }
@@ -1828,16 +1750,12 @@
         },
         "additionalProperties": false
       },
-      "BaseSegmentDto": {
-        "type": "object",
-        "additionalProperties": false
-      },
       "DistanceUnit": {
         "enum": ["Kilometers", "Miles"],
         "type": "string"
       },
       "GroupDto": {
-        "required": ["id", "joiningCode"],
+        "required": ["groupMembers", "id", "joiningCode"],
         "type": "object",
         "properties": {
           "id": {
@@ -1847,6 +1765,12 @@
           "joiningCode": {
             "minLength": 1,
             "type": "string"
+          },
+          "groupMembers": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GroupMemberDto"
+            }
           }
         },
         "additionalProperties": false
@@ -1879,7 +1803,7 @@
         "description": "Represents a strongly-typed error response containing a machine-readable error code."
       },
       "GroupMemberDto": {
-        "required": ["id", "nickname", "username"],
+        "required": ["id", "isCreator", "nickname", "username"],
         "type": "object",
         "properties": {
           "id": {
@@ -1896,22 +1820,9 @@
           },
           "location": {
             "$ref": "#/components/schemas/UserLocationDto"
-          }
-        },
-        "additionalProperties": false
-      },
-      "GroupMemberLocationRequestDto": {
-        "required": ["userId"],
-        "type": "object",
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/UserLocationRequestDto"
-          }
-        ],
-        "properties": {
-          "userId": {
-            "type": "string",
-            "format": "uuid"
+          },
+          "isCreator": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -2033,48 +1944,6 @@
         },
         "additionalProperties": false
       },
-      "PathRequestDto": {
-        "required": ["arrivalTime", "destinationLatitude", "destinationLongitude", "userLocations"],
-        "type": "object",
-        "properties": {
-          "destinationLatitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "destinationLongitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "arrivalTime": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "userLocations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GroupMemberLocationRequestDto"
-            }
-          }
-        },
-        "additionalProperties": false
-      },
-      "ProposedPathDto": {
-        "required": ["pathId", "paths"],
-        "type": "object",
-        "properties": {
-          "pathId": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "paths": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/UserPathDto"
-            }
-          }
-        },
-        "additionalProperties": false
-      },
       "RegisterErrorCode": {
         "enum": [
           "EMAIL_ALREADY_USED",
@@ -2124,150 +1993,6 @@
           "nickname": {
             "minLength": 1,
             "type": "string"
-          }
-        },
-        "additionalProperties": false
-      },
-      "RouteLineDto": {
-        "required": ["color", "headSign", "longName", "shortName", "textColor", "type"],
-        "type": "object",
-        "properties": {
-          "type": {
-            "$ref": "#/components/schemas/RouteType"
-          },
-          "shortName": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "longName": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "headSign": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "color": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "textColor": {
-            "minLength": 1,
-            "type": "string"
-          }
-        },
-        "additionalProperties": false
-      },
-      "RouteSegmentDto": {
-        "required": ["line", "shapes", "stops"],
-        "type": "object",
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/BaseSegmentDto"
-          }
-        ],
-        "properties": {
-          "line": {
-            "$ref": "#/components/schemas/RouteLineDto"
-          },
-          "stops": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/StopDto"
-            }
-          },
-          "shapes": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ShapeSectionDto"
-            }
-          }
-        },
-        "additionalProperties": false
-      },
-      "RouteType": {
-        "enum": [
-          "Tram",
-          "Metro",
-          "Rail",
-          "Bus",
-          "Ferry",
-          "CableCar",
-          "AerialLift",
-          "Funicular",
-          "Trolleybus",
-          "Monorail"
-        ],
-        "type": "string"
-      },
-      "ShapeCoordDto": {
-        "required": ["latitude", "longitude"],
-        "type": "object",
-        "properties": {
-          "latitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "longitude": {
-            "type": "number",
-            "format": "double"
-          }
-        },
-        "additionalProperties": false
-      },
-      "ShapeSectionDto": {
-        "required": ["coords"],
-        "type": "object",
-        "properties": {
-          "from": {
-            "type": "string",
-            "nullable": true
-          },
-          "to": {
-            "type": "string",
-            "nullable": true
-          },
-          "coords": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ShapeCoordDto"
-            }
-          }
-        },
-        "additionalProperties": false
-      },
-      "StopDto": {
-        "required": ["id", "latitude", "longitude", "name", "wheelchairAccessible"],
-        "type": "object",
-        "properties": {
-          "id": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "name": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "latitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "longitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "wheelchairAccessible": {
-            "type": "boolean"
-          },
-          "arrivalTime": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "departureTime": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2418,77 +2143,6 @@
           }
         },
         "additionalProperties": false
-      },
-      "UserPathDto": {
-        "required": ["segments", "userId"],
-        "type": "object",
-        "properties": {
-          "userId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "segments": {
-            "type": "array",
-            "items": {
-              "oneOf": [
-                {
-                  "$ref": "#/components/schemas/RouteSegmentDto"
-                },
-                {
-                  "$ref": "#/components/schemas/WalkSegmentDto"
-                }
-              ]
-            }
-          }
-        },
-        "additionalProperties": false
-      },
-      "WalkLocationDto": {
-        "required": ["id", "latitude", "longitude"],
-        "type": "object",
-        "properties": {
-          "id": {
-            "minLength": 1,
-            "type": "string"
-          },
-          "latitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "longitude": {
-            "type": "number",
-            "format": "double"
-          },
-          "name": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "WalkSegmentDto": {
-        "required": ["from", "shapes", "to"],
-        "type": "object",
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/BaseSegmentDto"
-          }
-        ],
-        "properties": {
-          "from": {
-            "$ref": "#/components/schemas/WalkLocationDto"
-          },
-          "to": {
-            "$ref": "#/components/schemas/WalkLocationDto"
-          },
-          "shapes": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ShapeSectionDto"
-            }
-          }
-        },
-        "additionalProperties": false
       }
     },
     "securitySchemes": {
@@ -2513,10 +2167,6 @@
     {
       "name": "Groups",
       "description": "Provides API endpoints for managing groups and user membership within groups."
-    },
-    {
-      "name": "Routes",
-      "description": "Provides endpoints for calculating shared routes between users."
     },
     {
       "name": "UserConfiguration",
